TextInput failed state (Layout Shift Bug - See Disc)
Adding the Icon + Failtext shifts the component up + left, away from origin position.

--- a/src/svelte/colors.scss
+++ b/src/svelte/colors.scss
@@ -2,3 +2,5 @@ $background-grey: #35363A;
 $primary-blue: #4E8FDB;
 $cancel-red: #E5766F;
 $disabled-grey: #C4C4C4;
+$text-input-border-grey: #8D8D8D;
+$text-input-border-red: #DA1E28;
